simple pivot table generated

--- a/PivotTable/PivotTable.UI/PivotTable.UI.csproj
+++ b/PivotTable/PivotTable.UI/PivotTable.UI.csproj
@@ -145,8 +145,79 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
+    <Content Include="vendor\c3_renderers.js" />
+    <Content Include="vendor\c3_renderers.min.js" />
+    <Content Include="vendor\d3_renderers.js" />
+    <Content Include="vendor\d3_renderers.min.js" />
+    <Content Include="vendor\export_renderers.js" />
+    <Content Include="vendor\export_renderers.min.js" />
+    <Content Include="vendor\gchart_renderers.js" />
+    <Content Include="vendor\gchart_renderers.min.js" />
+    <Content Include="vendor\pivot.css" />
+    <Content Include="vendor\pivot.da.js" />
+    <Content Include="vendor\pivot.da.min.js" />
+    <Content Include="vendor\pivot.de.js" />
+    <Content Include="vendor\pivot.de.min.js" />
+    <Content Include="vendor\pivot.es.js" />
+    <Content Include="vendor\pivot.es.min.js" />
+    <Content Include="vendor\pivot.fr.js" />
+    <Content Include="vendor\pivot.fr.min.js" />
+    <Content Include="vendor\pivot.it.js" />
+    <Content Include="vendor\pivot.it.min.js" />
+    <Content Include="vendor\pivot.js" />
+    <Content Include="vendor\pivot.min.css" />
+    <Content Include="vendor\pivot.min.js" />
+    <Content Include="vendor\pivot.nl.js" />
+    <Content Include="vendor\pivot.nl.min.js" />
+    <Content Include="vendor\pivot.pl.js" />
+    <Content Include="vendor\pivot.pl.min.js" />
+    <Content Include="vendor\pivot.pt.js" />
+    <Content Include="vendor\pivot.pt.min.js" />
+    <Content Include="vendor\pivot.ru.js" />
+    <Content Include="vendor\pivot.ru.min.js" />
+    <Content Include="vendor\pivot.tr.js" />
+    <Content Include="vendor\pivot.tr.min.js" />
+    <Content Include="vendor\pivot.zh.js" />
+    <Content Include="vendor\pivot.zh.min.js" />
+    <Content Include="vendor\pivot_spec.js" />
+    <Content Include="vendor\pivot_spec.min.js" />
+    <Content Include="vendor\tips_data.min.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\underscore.min.map" />
+    <Content Include="vendor\c3_renderers.js.map" />
+    <Content Include="vendor\c3_renderers.min.js.map" />
+    <Content Include="vendor\d3_renderers.js.map" />
+    <Content Include="vendor\d3_renderers.min.js.map" />
+    <Content Include="vendor\export_renderers.js.map" />
+    <Content Include="vendor\export_renderers.min.js.map" />
+    <Content Include="vendor\gchart_renderers.js.map" />
+    <Content Include="vendor\gchart_renderers.min.js.map" />
+    <Content Include="vendor\pivot.da.js.map" />
+    <Content Include="vendor\pivot.da.min.js.map" />
+    <Content Include="vendor\pivot.de.js.map" />
+    <Content Include="vendor\pivot.de.min.js.map" />
+    <Content Include="vendor\pivot.es.js.map" />
+    <Content Include="vendor\pivot.es.min.js.map" />
+    <Content Include="vendor\pivot.fr.js.map" />
+    <Content Include="vendor\pivot.fr.min.js.map" />
+    <Content Include="vendor\pivot.it.js.map" />
+    <Content Include="vendor\pivot.it.min.js.map" />
+    <Content Include="vendor\pivot.js.map" />
+    <Content Include="vendor\pivot.min.js.map" />
+    <Content Include="vendor\pivot.nl.js.map" />
+    <Content Include="vendor\pivot.nl.min.js.map" />
+    <Content Include="vendor\pivot.pl.js.map" />
+    <Content Include="vendor\pivot.pl.min.js.map" />
+    <Content Include="vendor\pivot.pt.js.map" />
+    <Content Include="vendor\pivot.pt.min.js.map" />
+    <Content Include="vendor\pivot.ru.js.map" />
+    <Content Include="vendor\pivot.ru.min.js.map" />
+    <Content Include="vendor\pivot.tr.js.map" />
+    <Content Include="vendor\pivot.tr.min.js.map" />
+    <Content Include="vendor\pivot.zh.js.map" />
+    <Content Include="vendor\pivot.zh.min.js.map" />
+    <Content Include="vendor\pivot_spec.js.map" />
+    <Content Include="vendor\pivot_spec.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
