pivot table changes

--- a/PivotTable/PivotTable.UI/PivotTable.UI.csproj
+++ b/PivotTable/PivotTable.UI/PivotTable.UI.csproj
@@ -133,7 +133,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\c3.css" />
-    <Content Include="Content\c3.min.css" />
+    <Content Include="dist\c3.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
@@ -176,9 +176,14 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="dist\bootstrap.min.js" />
+    <Content Include="dist\c3.min.js" />
+    <Content Include="dist\d3.min.js" />
+    <Content Include="dist\jquery-1.12.4.min.js" />
+    <Content Include="dist\jquery-ui-1.12.1.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="js\pivot.js" />
+    <Content Include="dist\pivot.js" />
     <Content Include="js\show_code.js" />
     <Content Include="LICENSE.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -196,79 +201,79 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
-    <Content Include="vendor\c3_renderers.js" />
-    <Content Include="vendor\c3_renderers.min.js" />
-    <Content Include="vendor\d3_renderers.js" />
-    <Content Include="vendor\d3_renderers.min.js" />
-    <Content Include="vendor\export_renderers.js" />
-    <Content Include="vendor\export_renderers.min.js" />
-    <Content Include="vendor\gchart_renderers.js" />
-    <Content Include="vendor\gchart_renderers.min.js" />
-    <Content Include="vendor\pivot.css" />
-    <Content Include="vendor\pivot.da.js" />
-    <Content Include="vendor\pivot.da.min.js" />
-    <Content Include="vendor\pivot.de.js" />
-    <Content Include="vendor\pivot.de.min.js" />
-    <Content Include="vendor\pivot.es.js" />
-    <Content Include="vendor\pivot.es.min.js" />
-    <Content Include="vendor\pivot.fr.js" />
-    <Content Include="vendor\pivot.fr.min.js" />
-    <Content Include="vendor\pivot.it.js" />
-    <Content Include="vendor\pivot.it.min.js" />
-    <Content Include="vendor\pivot.js" />
-    <Content Include="vendor\pivot.min.css" />
-    <Content Include="vendor\pivot.min.js" />
-    <Content Include="vendor\pivot.nl.js" />
-    <Content Include="vendor\pivot.nl.min.js" />
-    <Content Include="vendor\pivot.pl.js" />
-    <Content Include="vendor\pivot.pl.min.js" />
-    <Content Include="vendor\pivot.pt.js" />
-    <Content Include="vendor\pivot.pt.min.js" />
-    <Content Include="vendor\pivot.ru.js" />
-    <Content Include="vendor\pivot.ru.min.js" />
-    <Content Include="vendor\pivot.tr.js" />
-    <Content Include="vendor\pivot.tr.min.js" />
-    <Content Include="vendor\pivot.zh.js" />
-    <Content Include="vendor\pivot.zh.min.js" />
-    <Content Include="vendor\pivot_spec.js" />
-    <Content Include="vendor\pivot_spec.min.js" />
-    <Content Include="vendor\tips_data.min.js" />
+    <Content Include="dist\vendor\c3_renderers.js" />
+    <Content Include="dist\vendor\c3_renderers.min.js" />
+    <Content Include="dist\vendor\d3_renderers.js" />
+    <Content Include="dist\vendor\d3_renderers.min.js" />
+    <Content Include="dist\vendor\export_renderers.js" />
+    <Content Include="dist\vendor\export_renderers.min.js" />
+    <Content Include="dist\vendor\gchart_renderers.js" />
+    <Content Include="dist\vendor\gchart_renderers.min.js" />
+    <Content Include="dist\vendor\pivot.css" />
+    <Content Include="dist\vendor\pivot.da.js" />
+    <Content Include="dist\vendor\pivot.da.min.js" />
+    <Content Include="dist\vendor\pivot.de.js" />
+    <Content Include="dist\vendor\pivot.de.min.js" />
+    <Content Include="dist\vendor\pivot.es.js" />
+    <Content Include="dist\vendor\pivot.es.min.js" />
+    <Content Include="dist\vendor\pivot.fr.js" />
+    <Content Include="dist\vendor\pivot.fr.min.js" />
+    <Content Include="dist\vendor\pivot.it.js" />
+    <Content Include="dist\vendor\pivot.it.min.js" />
+    <Content Include="dist\vendor\pivot.js" />
+    <Content Include="dist\vendor\pivot.min.css" />
+    <Content Include="dist\vendor\pivot.min.js" />
+    <Content Include="dist\vendor\pivot.nl.js" />
+    <Content Include="dist\vendor\pivot.nl.min.js" />
+    <Content Include="dist\vendor\pivot.pl.js" />
+    <Content Include="dist\vendor\pivot.pl.min.js" />
+    <Content Include="dist\vendor\pivot.pt.js" />
+    <Content Include="dist\vendor\pivot.pt.min.js" />
+    <Content Include="dist\vendor\pivot.ru.js" />
+    <Content Include="dist\vendor\pivot.ru.min.js" />
+    <Content Include="dist\vendor\pivot.tr.js" />
+    <Content Include="dist\vendor\pivot.tr.min.js" />
+    <Content Include="dist\vendor\pivot.zh.js" />
+    <Content Include="dist\vendor\pivot.zh.min.js" />
+    <Content Include="dist\vendor\pivot_spec.js" />
+    <Content Include="dist\vendor\pivot_spec.min.js" />
+    <Content Include="dist\vendor\tips_data.min.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\underscore.min.map" />
-    <Content Include="vendor\c3_renderers.js.map" />
-    <Content Include="vendor\c3_renderers.min.js.map" />
-    <Content Include="vendor\d3_renderers.js.map" />
-    <Content Include="vendor\d3_renderers.min.js.map" />
-    <Content Include="vendor\export_renderers.js.map" />
-    <Content Include="vendor\export_renderers.min.js.map" />
-    <Content Include="vendor\gchart_renderers.js.map" />
-    <Content Include="vendor\gchart_renderers.min.js.map" />
-    <Content Include="vendor\pivot.da.js.map" />
-    <Content Include="vendor\pivot.da.min.js.map" />
-    <Content Include="vendor\pivot.de.js.map" />
-    <Content Include="vendor\pivot.de.min.js.map" />
-    <Content Include="vendor\pivot.es.js.map" />
-    <Content Include="vendor\pivot.es.min.js.map" />
-    <Content Include="vendor\pivot.fr.js.map" />
-    <Content Include="vendor\pivot.fr.min.js.map" />
-    <Content Include="vendor\pivot.it.js.map" />
-    <Content Include="vendor\pivot.it.min.js.map" />
-    <Content Include="vendor\pivot.js.map" />
-    <Content Include="vendor\pivot.min.js.map" />
-    <Content Include="vendor\pivot.nl.js.map" />
-    <Content Include="vendor\pivot.nl.min.js.map" />
-    <Content Include="vendor\pivot.pl.js.map" />
-    <Content Include="vendor\pivot.pl.min.js.map" />
-    <Content Include="vendor\pivot.pt.js.map" />
-    <Content Include="vendor\pivot.pt.min.js.map" />
-    <Content Include="vendor\pivot.ru.js.map" />
-    <Content Include="vendor\pivot.ru.min.js.map" />
-    <Content Include="vendor\pivot.tr.js.map" />
-    <Content Include="vendor\pivot.tr.min.js.map" />
-    <Content Include="vendor\pivot.zh.js.map" />
-    <Content Include="vendor\pivot.zh.min.js.map" />
-    <Content Include="vendor\pivot_spec.js.map" />
-    <Content Include="vendor\pivot_spec.min.js.map" />
+    <Content Include="dist\vendor\c3_renderers.js.map" />
+    <Content Include="dist\vendor\c3_renderers.min.js.map" />
+    <Content Include="dist\vendor\d3_renderers.js.map" />
+    <Content Include="dist\vendor\d3_renderers.min.js.map" />
+    <Content Include="dist\vendor\export_renderers.js.map" />
+    <Content Include="dist\vendor\export_renderers.min.js.map" />
+    <Content Include="dist\vendor\gchart_renderers.js.map" />
+    <Content Include="dist\vendor\gchart_renderers.min.js.map" />
+    <Content Include="dist\vendor\pivot.da.js.map" />
+    <Content Include="dist\vendor\pivot.da.min.js.map" />
+    <Content Include="dist\vendor\pivot.de.js.map" />
+    <Content Include="dist\vendor\pivot.de.min.js.map" />
+    <Content Include="dist\vendor\pivot.es.js.map" />
+    <Content Include="dist\vendor\pivot.es.min.js.map" />
+    <Content Include="dist\vendor\pivot.fr.js.map" />
+    <Content Include="dist\vendor\pivot.fr.min.js.map" />
+    <Content Include="dist\vendor\pivot.it.js.map" />
+    <Content Include="dist\vendor\pivot.it.min.js.map" />
+    <Content Include="dist\vendor\pivot.js.map" />
+    <Content Include="dist\vendor\pivot.min.js.map" />
+    <Content Include="dist\vendor\pivot.nl.js.map" />
+    <Content Include="dist\vendor\pivot.nl.min.js.map" />
+    <Content Include="dist\vendor\pivot.pl.js.map" />
+    <Content Include="dist\vendor\pivot.pl.min.js.map" />
+    <Content Include="dist\vendor\pivot.pt.js.map" />
+    <Content Include="dist\vendor\pivot.pt.min.js.map" />
+    <Content Include="dist\vendor\pivot.ru.js.map" />
+    <Content Include="dist\vendor\pivot.ru.min.js.map" />
+    <Content Include="dist\vendor\pivot.tr.js.map" />
+    <Content Include="dist\vendor\pivot.tr.min.js.map" />
+    <Content Include="dist\vendor\pivot.zh.js.map" />
+    <Content Include="dist\vendor\pivot.zh.min.js.map" />
+    <Content Include="dist\vendor\pivot_spec.js.map" />
+    <Content Include="dist\vendor\pivot_spec.min.js.map" />
     <Content Include="Views\Home\SimplePivot.cshtml" />
     <Content Include="Views\Home\PivotWithJson.cshtml" />
     <Content Include="Views\Home\PivotUIWithJson.cshtml" />
